added header stlye

--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
         <link rel="stylesheet" href="style.css">  
     </head>
     <body>
-        <div class="header-container">
-        <h4>Header Logo</h4>
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
-    </div>
 
-    </body>
+        <div  class="header-container">
+          <div class="header-items Logo" style="font-weight: bold;">Header Logo</div>
+          <div class="header-items">header link one</div>
+          <div class="header-items">header link two</div>
+          <div class="header-items">header link three</div>
+        </div>
+        </body>
 </html>
