changed deivs to links in header items

--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Project: Landing Page</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style.css">  
-    </head>
-    <body>
-
-        <div  class="header-container">
-          <div class="header-items Logo" style="font-weight: bold;">Header Logo</div>
-          <div class="header-items">header link one</div>
-          <div class="header-items">header link two</div>
-          <div class="header-items">header link three</div>
-        </div>
-        </body>
+  <head>
+    <title>Project: Landing Page</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="header-container">
+      <div class="Logo" style="font-weight: bold">Header Logo</div>
+      <div class="header-items">header link one
+      <a href="https://www.example.com/page1" target="_blank"></a>
+     </div>
+      <div class="header-items">header link two
+      <a href="https://www.example.com/page1" target="_blank"></a>
+     </div>
+      <div class="header-items">header link three
+      <a href="https://www.example.com/page1" target="_blank"></a>
+     </div>
+    </div>
+  </body>
+  <main class="main-container">
+      <div class="main-items">
+        <h1>This website is awesome</h1>
+        <p>
+          This website has some subtext that goes unders the main title. it`s a
+          smaller font and the color is lower in contrast
+        </p>
+        <button style=" background-color:#3882F6; color: white;">sign up</button>
+      </div>
+      <div class="main-items placeholder" >
+      <image src="" alt="this is a placeholder for an image">    
+      </div>
+  </main>
 </html>
