--- a/index.html
+++ b/index.html
@@ -6,20 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
+
     <div class="header-container">
       <div class="Logo" style="font-weight: bold">Header Logo</div>
-      <div class="header-items">header link one
-      <a href="https://www.example.com/page1" target="_blank"></a>
-     </div>
-      <div class="header-items">header link two
-      <a href="https://www.example.com/page1" target="_blank"></a>
-     </div>
-      <div class="header-items">header link three
-      <a href="https://www.example.com/page1" target="_blank"></a>
-     </div>
+      <div class="header-items">
+      <a href="https://www.example.com/page1" target="_blank">header link one</a>
     </div>
-  </body>
+
+      <div class="header-items">
+      <a href="https://www.example.com/page1" target="_blank">header link two</a>
+    </div>
+
+      <div class="header-items">
+      <a href="https://www.example.com/page1" target="_blank">header link three</a>
+    </div>
+    </div>
   <main class="main-container">
       <div class="main-items">
         <h1>This website is awesome</h1>
@@ -33,4 +36,6 @@
       <image src="" alt="this is a placeholder for an image">    
       </div>
   </main>
+  
+</body>
 </html>
