added box continer for images and qoute container

--- a/index.html
+++ b/index.html
@@ -5,37 +5,63 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
   </head>
 
   <body>
 
     <div class="header-container">
-      <div class="Logo" style="font-weight: bold">Header Logo</div>
-      <div class="header-items">
-      <a href="https://www.example.com/page1" target="_blank">header link one</a>
+      <a class="Logo" href="index.html" rel="noopener noreferrer">Header Logo</a>
+       <ul>
+        <li><a href="https://www.example.com/page1" target="_blank">header link one</a></li>
+        <li><a href="https://www.example.com/page1" target="_blank">header link two</a></li>
+        <li><a href="https://www.example.com/page1" target="_blank">header link three</a></li>
+       </ul>
     </div>
-
-      <div class="header-items">
-      <a href="https://www.example.com/page1" target="_blank">header link two</a>
-    </div>
-
-      <div class="header-items">
-      <a href="https://www.example.com/page1" target="_blank">header link three</a>
-    </div>
-    </div>
-  <main class="main-container">
-      <div class="main-items">
-        <h1>This website is awesome</h1>
-        <p>
+     
+     </div>
+     <div class="main-container">
+      <div class="hero-left">
+        <div class="hero-main" >This website is awesome</div>
+        <div class="hero-subtext">
           This website has some subtext that goes unders the main title. it`s a
-          smaller font and the color is lower in contrast
-        </p>
-        <button style=" background-color:#3882F6; color: white;">sign up</button>
+          smaller font and the color is lower in contrast</div>       
+        <button class="hero-button" style=" background-color:#3882F6; color: white;">sign up</button>
       </div>
-      <div class="main-items placeholder" >
-      <image src="" alt="this is a placeholder for an image">    
-      </div>
-  </main>
-  
+      <image class="hero-right" src="menudo.jpg" alt="this is a placeholder for an image">    
+    </div>
+
+<div class="information">
+  <div class="information-header">some random information</div>
+  <div class="information-content">
+    <div class="box-container">
+    <div><image class="box-image" src="menudo.jpg" alt=" image"></div>
+    <div class="box-text">this is some subtext under an illustration or image</div>
+    </div>
+
+    <div class="box-container">   
+     <div><image class="box-image" src=menudo.jpg alt="image"></div>
+     <div class="box-text">this is some subtext under an illustration or image</div>
+    </div>
+    
+    <div class="box-container">
+     <div><image class="box-image" src=menudo.jpg alt=" image"></div>
+      <div class="box-text">this is some subtext under an illustration or image</div>
+     </div>
+   
+     <div class="box-container">
+     <div><image class="box-image" src=menudo.jpg alt=" image"></div>
+     <div class="box-text">this is some subtext under an illustration or image</div>
+   </div>
+
+  </div>
+
+  <div class="quote-container">
+  <div class="quote">"sLorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget tortor sed urna consectetur semper vitae vitae lectus. Praesent hendrerit lectus nec felis tincidunt rhoncus. Sed lacinia nisi id elit convallis, quis euismod nulla ornare."</div>
+  <div class="author"> "-author"</div>
+
+  </div>
+
+   
 </body>
 </html>
