commit staged changes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
        </ul>
     </div>
      
-     </div>
      <div class="main-container">
       <div class="hero-left">
         <div class="hero-main" >This website is awesome</div>
@@ -31,13 +30,13 @@
       <image class="hero-right" src="menudo.jpg" alt="this is a placeholder for an image">    
     </div>
 
-<div class="information">
+ <div class="information">
   <div class="information-header">some random information</div>
   <div class="information-content">
     <div class="box-container">
     <div><image class="box-image" src="menudo.jpg" alt=" image"></div>
     <div class="box-text">this is some subtext under an illustration or image</div>
-    </div>
+ </div>
 
     <div class="box-container">   
      <div><image class="box-image" src=menudo.jpg alt="image"></div>
@@ -57,10 +56,20 @@
   </div>
 
   <div class="quote-container">
-  <div class="quote">"sLorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget tortor sed urna consectetur semper vitae vitae lectus. Praesent hendrerit lectus nec felis tincidunt rhoncus. Sed lacinia nisi id elit convallis, quis euismod nulla ornare."</div>
+  <div class="quote">"sLorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget tortor sed urna consectetur semper vitae vitae lectus. "</div>
   <div class="author"> "-author"</div>
 
   </div>
+
+<div class="action-container">
+ <div class="action-box"> 
+   <div class="action-header">Call to action it`s time</div>
+   <div class="action-text">sign up for our product by  clcking that button right over there</div>
+ </div>
+ <button class="action-button">sign up</button>
+</div>
+
+
 
    
 </body>
