--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      
     <div class="main-container">
       <div class="hero-left">
-        <div class="hero-main">
+        <div class="hero-text">
           Explore the world of wathces.
         </div>
         <div class="hero-subtext">
